# hair-and-looks-integration

./: .env.example  Dockerfile  README.md  pyproject.toml
src/: config.py  database.py  klaviyo_client.py  main.py  models.py  processor.py  scheduler.py
src/routes/: health.py  webhook.py
voorstel/: developer-briefing.md  voorstel-hair-and-looks.md
