[project]
name = "hair-and-looks-integration"
version = "0.1.0"
description = "Salonhub → Klaviyo middleware voor Hair & Looks"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]",
    "uvicorn",
    "pydantic>=2.0",
    "httpx",
    "python-dotenv",
    "apscheduler>=4.0.0a5",
    "aiosqlite",
    "pydantic-settings",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
